# open-with

./: .gitignore  Cargo.toml  README.md  deny.toml  devenv.nix  flake.nix
.cargo/: config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependency-update.yml  release.yml  security.yml
scripts/: coverage.sh  fmt.sh  integration.sh  verify.sh
src/: application_finder.rs  cache.rs  cli.rs  config.rs  desktop_parser.rs  executor.rs  fuzzy_finder.rs  main.rs  mime_associations.rs  mime_pattern.rs  mimeapps.rs  regex_handlers.rs  selector.rs  target.rs  template.rs  test_support.rs  xdg.rs
src/commands/: add.rs  completions.rs  context.rs  get.rs  list.rs  mime.rs  mod.rs  open.rs  remove.rs  set.rs  unset.rs
src/open_it/: bootstrap.rs  execution.rs  mod.rs  selection.rs  target.rs
