[package]
name = "open-with"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
glob = "0.3"
mime_guess = "2"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
indexmap = "2"
once_cell = "1"
regex = "1"
which = "7"
nix = { version = "0.30", features = ["process"] }
serial_test = "3.2.0"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono"] }

[profile.release]
lto = true
strip = true
opt-level = 3
