[package]
name = "openit"
version = "0.1.0"
edition = "2021"

[features]
default = []
icon-picker = ["gtk4"]

[[bin]]
name = "icon_picker"
required-features = ["icon-picker"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.5.33", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
dirs = "6"
glob = "0.3"
mime_guess = "2"
mime = "0.3"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
indexmap = "2"
regex = "1"
which = "8"
nix = { version = "0.30", features = ["process"] }
serial_test = "3.2.0"
url = "2"
walkdir = "2"
shell-words = "1.1"
gtk4 = { version = "0.10", optional = true }
derive_more = "0.99"
itertools = "0.12"
wildmatch = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
criterion = "0.7.0"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono"] }

[profile.release]
lto = true
strip = true
opt-level = 3


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
